--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install, build, and upload your site
         uses: withastro/action@v3
 
-  build:
+  deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
