--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,15 +21,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set ORGNAME and GITHUB_REF_NAME
+        run: |
+          echo "ORGNAME=mountainash-io" >> $GITHUB_ENV
+          echo "GITHUB_REF_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+
+      - name: Create Build Command
+        run: |
+            if [ "$GITHUB_REF_NAME" = "main" ]; then
+            echo "BUILD_COMMAND=pnpm run build -- --base /${{ env.ORGNAME }} >> $GITHUB_ENV"
+          else
+            echo "BUILD_COMMAND=pnpm run build -- --base /${{ env.ORGNAME }}/${{ env.GITHUB_REF_NAME }} >> $GITHUB_ENV"
+          fi
+
+
       - name: Install, build, and upload your site
         uses: withastro/action@v3
         with:
           # path: . # The root location of your Astro project inside the repository. (optional)
           node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
           package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
-          build-command: npm run build -- --base /${{ github.event.repository.name }}/${{ github.ref_name }}
-        env:
-        GITHUB_REF_NAME: ${{ github.ref_name }}
+          build-command: ${{ env.BUILD_COMMAND }}         
 
   deploy:
     needs: build
