Remove unused code related to GitHub branch handling and update base URL in astro.config. Update dev:branch script in package.json.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "dev:branch": "GITHUB_REF_NAME=$(git rev-parse --abbrev-ref HEAD) astro dev"    
+    // "dev:branch": "GITHUB_REF_NAME=$(git rev-parse --abbrev-ref HEAD) astro dev"    
   },
   "dependencies": {
     "@astrojs/mdx": "^3.0.1",
