Update deployment workflow and Astro configuration, remove unused code, and clean up package.json. Update deployment workflow and Astro configuration, remove unused code, and clean up package.json.
- Removed unused code related to GitHub repo name and branch
- Updated base URL in Astro configuration
- Cleaned up unnecessary comments in package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    // "dev:branch": "GITHUB_REF_NAME=$(git rev-parse --abbrev-ref HEAD) astro dev"    
+    "astro": "astro"  
   },
   "dependencies": {
     "@astrojs/mdx": "^3.0.1",
