--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"  
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^3.0.1",
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/bricolage-grotesque": "^5.0.6",
     "@fontsource-variable/inter": "^5.0.18",
+    "@fontsource/poppins": "^5.1.0",
     "@iconify-json/bx": "^1.1.10",
     "@iconify-json/simple-icons": "^1.2.3",
     "@iconify-json/uil": "^1.1.8",
