--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@iconify-json/simple-icons": "^1.2.3",
     "@iconify-json/uil": "^1.1.8",
     "@tailwindcss/typography": "^0.5.13",
-    "astro": "^4.15.7",
     "astro-icon": "^1.1.1",
     "astro-navbar": "^2.3.2",
     "astro-seo": "^0.8.3",
     "sharp": "^0.33.4",
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "astro": "^4.15.11"
   }
 }
